fix not showing font when pnpm build

--- a/read-more-frontend/src/app.pcss
+++ b/read-more-frontend/src/app.pcss
@@ -6,3 +6,14 @@
 .scrollable {
 	overflow-y: overlay;
 }
+
+@font-face {
+	font-family: 'NotoSansSC';
+	src: url('/fonts/NotoSansSC-VariableFont_wght.ttf') format('ttf');
+	font-weight: normal;
+	font-style: normal;
+}
+
+body {
+	font-family: 'NotoSansSC';
+}
